Add Readme.md. Add License.md. Move src, tests, samples folders. Remove log helpers. Add nuget.config. Update version constraints.

--- a/tests/Keymapp.NET.Tests.Integration/Keymapp.NET.Tests.Integration.csproj
+++ b/tests/Keymapp.NET.Tests.Integration/Keymapp.NET.Tests.Integration.csproj
@@ -9,9 +9,8 @@
     <PackageReference Include="NUnit3TestAdapter"/>
     <PackageReference Include="Shouldly"/>
     <PackageReference Include="Grpc.Net.Client"/>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Keymapp.NET\Keymapp.NET.csproj"/>
+    <ProjectReference Include="..\..\src\Keymapp.NET\Keymapp.NET.csproj" />
   </ItemGroup>
 </Project>
