--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,16 +5,13 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- Keymapp.NET project packages -->
-    <PackageVersion Include="Google.Protobuf" Version="3.32.0" />
-    <PackageVersion Include="Grpc.Net.Client" Version="2.71.0" />
-    <PackageVersion Include="Grpc.Tools" Version="2.72.0" />
-    <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
-    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.8" />
-    <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.8" />
-
+    <PackageVersion Include="Grpc.Net.Client" Version="[2.36.0,3.0)" />
+    <PackageVersion Include="Grpc.Tools" Version="[2.36.0,3.0)" />
+    <PackageVersion Include="Google.Protobuf" Version="[3.27.1,4.0)" />
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="[5.0.0,]" />
+    <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="[5.0.0,]" />
     <!-- Sample project packages -->
-    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
-
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="[5.0.0,]" />
     <!-- Integration Tests project packages -->
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageVersion Include="NUnit" Version="4.4.0" />
