--- a/samples/Sample/Sample.csproj
+++ b/samples/Sample/Sample.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Keymapp.NET\Keymapp.NET.csproj"/>
+    <ProjectReference Include="..\..\src\Keymapp.NET\Keymapp.NET.csproj" />
   </ItemGroup>
 
   <ItemGroup>
